gccida/g1/delete_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/cfgrtl.c:576:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/cfgrtl.c:576:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/cfgrtl.c:594:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)insn[3].fld[0]; 
                      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/cfgrtl.c:608:48: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( *( _WORD *)insn == 33 && ( v2 = ( __int64)insn[4]) != 0 && *( _WORD *)v2 == 36 ) 
                                               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/cfgrtl.c:614:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note = find_reg_note( insn, REG_LABEL, 0LL); 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/cfgrtl.c:614:10: error: expected identifier or '('
reg_note = find_reg_note( insn, REG_LABEL, 0LL); 
         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/cfgrtl.c:615:6: error: use of undeclared identifier 'reg_note'; did you mean 'reg_names'?
if ( reg_note ) 
     ^~~~~~~~
     reg_names
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/regs.h:166:21: note: 'reg_names' declared here
extern const char * reg_names[FIRST_PSEUDO_REGISTER];
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/cfgrtl.c:617:23: error: use of undeclared identifier 'reg_note'
v4.rtwint = ( __int64)reg_note->fld[0]; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/cfgrtl.c:624:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int16 *)insn[2]; 
                 ^~~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/delete_insn/src/obj/cfgrtl.o] Error 1
